--- a/index.html
+++ b/index.html
@@ -431,18 +431,22 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-4">
                 <div class="embed-responsive embed-responsive-16by9">
                     <iframe class="embed-responsive-item" style="width:100%; height:420px;" src="https://www.youtube.com/embed/j0FvI0qP6q0" allowfullscreen></iframe>
                 </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-4">
                 <div class="embed-responsive embed-responsive-16by9">
                     <iframe class="embed-responsive-item" style="width:100%; height:420px;" src="https://www.youtube.com/embed/QFrZ6a2eGCc" allowfullscreen></iframe>
                 </div>
             </div>
+            <div class="col-md-4">
+                <div class="embed-responsive embed-responsive-16by9">
+                    <iframe class="embed-responsive-item" style="width:100%; height:420px;" src="https://www.youtube.com/embed/mSC62EdkxgQ" allowfullscreen></iframe>
+                </div>
+            </div>
         </div>
-        
         <div class="row" style="padding-top:20px">
             
             <div class="col-md-3">
