--- a/index.html
+++ b/index.html
@@ -231,13 +231,30 @@
                         <div class="row">
                             <h5 class="text-danger"><i class="fa-solid fa-down-left-and-up-right-to-center"></i><span style="margin: 10px;">Sharing experience</span>
                             </h5>
+                        </div><div class="row">
+                            <div class="col-md-6">
+                                <div class="row">
+                                    <div style="margin-left: auto; margin-right: auto; display: block;">
+                                        <img src="\picture\370040197_6319018968226894_3567841142900484913_n.jpg" class="img-thumbnail" alt="Portrait Photo" style="width:100%; height:360px;"></img>
+                                        <p style="font-style: italic; text-align:center">HAPUA 2023 - APSO Reliable Electricity for Energy Transition - Cyber Security</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="row">
+                                    <div style="margin-left: auto; margin-right: auto; display: block;">
+                                        <img src="\picture\z4636112950812_bb6476638dd7672926760b53f9fc35d7.png" class="img-thumbnail" alt="Portrait Photo" style="width:100%; height:360px;"></img>
+                                        <p style="font-style: italic; text-align:center">HAPUA 2023 - APSO Reliable Electricity for Energy Transition</p>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                         <div class="row">
                                 <div class="col-md-6">
                                     <div class="row">
                                         <div style="margin-left: auto; margin-right: auto; display: block;">
                                             <img src="\picture\image3.jpg" class="img-thumbnail" alt="Portrait Photo" style="width:100%; height:360px;"></img>
-                                            <p style="font-style: italic; text-align:center">Topic: Engineers at Ho Chi Minh Load Dispatching Center</p>
+                                            <p style="font-style: italic; text-align:center">HCMC University of Technology 2019</p>
                                         </div>
                                     </div>
                                 </div>
@@ -245,7 +262,7 @@
                                     <div class="row">
                                         <div style="margin-left: auto; margin-right: auto; display: block;">
                                             <img src="\picture\screenshot_1672837022.png" class="img-thumbnail" alt="Portrait Photo" style="width:100%; height:360px;"></img>
-                                            <p style="font-style: italic; text-align:center">EVNHCMC Youth Organization</p>
+                                            <p style="font-style: italic; text-align:center">EVNHCMC Youth Organization 2021</p>
                                         </div>
                                     </div>
                                 </div>
@@ -255,7 +272,7 @@
                                 <div class="row">
                                     <div style="margin-left: auto; margin-right: auto; display: block;">
                                         <img src="\picture\image28.jpg" class="img-thumbnail" alt="Portrait Photo" style="width:100%; height:360px;"></img>
-                                        <p style="font-style: italic; text-align:center">Sharing Experences</p>
+                                        <p style="font-style: italic; text-align:center">Creative Workshop 2022</p>
                                     </div>
                                 </div>
                             </div>
@@ -263,7 +280,7 @@
                                 <div class="row">
                                     <div style="margin-left: auto; margin-right: auto; display: block;">
                                         <img src="\picture\image25.jpg" class="img-thumbnail" alt="Portrait Photo" style="width:100%; height:360px;"></img>
-                                        <p style="font-style: italic; text-align:center">Sharing Experences</p>
+                                        <p style="font-style: italic; text-align:center">VOH Channel 2022</p>
                                     </div>
                                 </div>
                             </div>
