--- a/index.html
+++ b/index.html
@@ -497,6 +497,9 @@
                         <button type="button" data-bs-target="#demo" data-bs-slide-to="19"></button>
                         <button type="button" data-bs-target="#demo" data-bs-slide-to="20"></button>
                         <button type="button" data-bs-target="#demo" data-bs-slide-to="21"></button>
+                        <button type="button" data-bs-target="#demo" data-bs-slide-to="22"></button>
+                        <button type="button" data-bs-target="#demo" data-bs-slide-to="23"></button>
+                        <button type="button" data-bs-target="#demo" data-bs-slide-to="24"></button>
                     </div>
 
                     <!-- The slideshow/carousel -->
@@ -566,6 +569,15 @@
                         </div>
                         <div class="carousel-item">
                             <img src="\picture\screenshot_1675073572.png" alt="New York" class="img-fluid">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="\picture\WhatsApp Image 2023-08-25 at 20.07.04.jpg" alt="New York" class="img-fluid">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="\picture\z4636084845970_43f83575d13629050f56ae2f0ee1ce74.jpg" alt="New York" class="img-fluid">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="\picture\z4636130167210_b747f46650ae98d03e8d8678429abf50.jpg" alt="New York" class="img-fluid">
                         </div>
                     </div>
 
