--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                             <div class="col-md-6">
                                 <div class="row">
                                     <div style="margin-left: auto; margin-right: auto; display: block;">
-                                        <img src="\picture\z4636112950812_bb6476638dd7672926760b53f9fc35d7.png" class="img-thumbnail" alt="Portrait Photo" style="width:100%; height:360px;"></img>
+                                        <img src="\picture\z4636112950812_bb6476638dd7672926760b53f9fc35d7.jpg" class="img-thumbnail" alt="Portrait Photo" style="width:100%; height:360px;"></img>
                                         <p style="font-style: italic; text-align:center">HAPUA 2023 - APSO Reliable Electricity for Energy Transition</p>
                                     </div>
                                 </div>
