--- a/index.html
+++ b/index.html
@@ -384,6 +384,20 @@
                             <div class="col-md-8">
                                 <div class="row">
                                     <div style="margin-left: auto; margin-right: auto; display: block;">
+                                        <img src="\picture\image30.jpg" class="img-thumbnail" alt="Portrait Photo" style="min-height:520px"></img>
+                                        <p style="font-style: italic; text-align:center">Giải thưởng Người thợ trẻ giỏi toàn quốc</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-2">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-2">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="row">
+                                    <div style="margin-left: auto; margin-right: auto; display: block;">
                                         <img src="\picture\image26.jpg" class="img-thumbnail" alt="Portrait Photo" style="min-height:520px"></img>
                                         <p style="font-style: italic; text-align:center">Giải thưởng Nguyễn Văn Trỗi</p>
                                     </div>
@@ -393,14 +407,13 @@
                             </div>
                         </div>
                         <div class="row">
-                            <h5 class="text-danger"><i class="fas fa-award"></i><span style="margin: 10px;">ACHIVEMENTS</span></h5>
                             <div class="col-md-2">
                             </div>
                             <div class="col-md-8">
                                 <div class="row">
                                     <div style="margin-left: auto; margin-right: auto; display: block;">
-                                        <img src="\picture\image30.jpg" class="img-thumbnail" alt="Portrait Photo" style="min-height:520px"></img>
-                                        <p style="font-style: italic; text-align:center">Giải thưởng Người thợ trẻ giỏi toàn quốc</p>
+                                        <img src="\picture\z4742797996540_2b1de9f2521b61ecd7e7bb10be66889f.jpg" class="img-thumbnail" alt="Portrait Photo" style="min-height:520px"></img>
+                                        <p style="font-style: italic; text-align:center">Giải thưởng Thủ lĩnh thanh niên</p>
                                     </div>
                                 </div>
                             </div>
