--- a/index.html
+++ b/index.html
@@ -421,6 +421,20 @@
                             </div>
                         </div>
                         <div class="row">
+                            <div class="col-md-2">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="row">
+                                    <div style="margin-left: auto; margin-right: auto; display: block;">
+                                        <img src="\picture\IMG_1131.JPG" class="img-thumbnail" alt="Portrait Photo" style="min-height:520px"></img>
+                                        <p style="font-style: italic; text-align:center">Giải thưởng ý tưởng tiết kiệm điện Tập đoàn Điện lực Việt Nam</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-2">
+                            </div>
+                        </div>
+                        <div class="row">
                             <div class="col-md-6">
                                 <div class="row">
                                     <div style="margin-left: auto; margin-right: auto; display: block;">
