--- a/index.html
+++ b/index.html
@@ -150,25 +150,35 @@
                 </ul>
                 <p class="mt-3" style="font-size: 20px;color:red"><i class="fa-solid fa-hat-cowboy"></i> Software Programing:
                 </p>
+                <p class="mt-3" style="font-size: 14px;color:darkolivegreen">Application:</p>
                 <ul style="font-size: 14px;text-align: justify;">
-                    <li>Application - WCF TCP/IP - MQTT Client - Member</li>
-                    <li>Application - WCF TCP/IP and HTTP for express SQL Data - Owner</li>
-                    <li>Webform - .Net Webs for Reporting - Owner</li>
-                    <li>Webform - .Net Webs Publish to Somee Domain - Owner</li>
-                    <li>Service - Windows Service for Auto Extract LOG's report to SQL - Owner</li>
-                    <li>Webform - API NodeJS for Data Exchange between Mongo, MySQL, MSSQL - Owner</li>
-                    <li>Webform - API NodeJS publish to Github and Heroku - Owner</li>
-                    <li>Application - Automatic Receiving DB lite for FTP/SFTP - Owner</li>
-                    <li>Application - Automatic Exporting Json Data for SMB - Owner</li>
-                    <li>Application - Checking IEDs 's connection - Owner</li>
-                    <li>Application - Export Testing document for IEDs - Owner</li>
-                    <li>Application - Telegram Bot for alarms and report - Owner</li>
-                    <li>Application - Server Supervisor / Alarms interface through SNMP - Owner</li>
-                    <li>Application - Ping App for Checking Modem's Signal quality - Owner</li>
-                    <li>Application - Method for present Power Direction in EVNHCMC - Owner</li>
-                    <li>Webform - DigitaliZation Note for Automation System - Owner</li>
-                    <li>Application - Transformer Power Supervisor / Alarms - Owner</li>
-                    <li>Webform - F81 Feeder Power Supervisor - Owner</li>
+                    <li>Application - WCF TCP/IP - MQTT Client - 2021 - Member</li>
+                    <li>Application - WCF TCP/IP and HTTP for express SQL Data - 2021 - Owner</li>
+                    <li>Application - Automatic Receiving DB lite for FTP/SFTP - 2021 - Owner</li>
+                    <li>Application - Automatic Exporting Json Data for SMB - 2022 - Owner</li>
+                    <li>Application - Checking IEDs 's connection - 2022 - Owner</li>
+                    <li>Application - Export Testing document for IEDs - 2022 - Owner</li>
+                    <li>Application - Telegram Bot for alarms and report - 2022 - Owner</li>
+                    <li>Application - Server Supervisor / Alarms interface through SNMP - 2022 - Owner</li>
+                    <li>Application - Ping App for Checking Modem's Signal quality - 2023 - Owner</li>
+                    <li>Application - Method for present Power Direction in EVNHCMC - 2023 - Owner</li>
+                    <li>Application - Transformer Power Supervisor / Alarms - 2023 - Owner</li>
+                    <li>Application - Telegram Bot for analytic reports of Electrical Operation - 2023 - Owner</li>
+                </ul>
+                <p class="mt-3" style="font-size: 14px;color:darkolivegreen">Webform:</p>
+                <ul style="font-size: 14px;text-align: justify;">
+                    <li>Webform - .Net Webs for Reporting - 2019 - Owner</li>
+                    <li>Webform - .Net Webs Publish to Somee Domain - 2020 - Owner</li>
+                    <li>Webform - API NodeJS for Data Exchange between Mongo, MySQL, MSSQL - 2020 - Owner</li>
+                    <li>Webform - API NodeJS publish to Github and Heroku - 2020 - Owner</li>
+                    <li>Webform - Digitalization Note for Automation System - 2023 - Owner</li>
+                    <li>Webform - F81 Feeder Power Supervisor - 2023 - Owner</li>
+                    <li>Webform - MVC Web - Digitalization of Operation-book for shiftworking - 2024 - Owner</li>
+                </ul>
+                <p class="mt-3" style="font-size: 14px;color:darkolivegreen">Service:</p>
+                <ul style="font-size: 14px;text-align: justify;">
+                    <li>Service - Windows Service for Auto Extract LOG's report to SQL - 2022 - Owner</li>
+                    <li>Service - Windows Service for API receivied data and alarms for substation connection - 2024 - Owner</li>
                 </ul>
 
                 <h3><i class="fa-brands fa-r-project"></i> Research's Achivements</h3>
@@ -190,8 +200,8 @@
                     <li>Cải tiến công tác lập báo cáo vận hành lưới điện phân phối Tân Thuận, Thủ Thiêm dựa trên nền tảng Web Service - 2019 - Owner</li>
                     <li>Nghiên cứu hệ thống Mircogrid nối lưới để nâng cao độ tin cậy cung cấp điện cho phụ tải điện quan trọng của TP.HCM - 2020 - Member</li>
                     <li>Giải pháp xây dựng hệ thống Gateway để giảm tải và dự phòng cho việc vận hành thiết bị trung thế điều khiển xa của hệ thống Alstom - 2020 - Owner</li>
-                    <li>Xây dựng thí điểm lưới điện Microgrid có tích hợp năng lượng tái tạo (PV) và hệ thống pin tích trữ năng lượng (BESS) tại Trung tâm dữ liệu (Data Center) của Tổng công ty Điện lực TP.HCM - 2021 - Member
-                    </li>
+                    <li>Xây dựng thí điểm lưới điện Microgrid có tích hợp năng lượng tái tạo (PV) và hệ thống pin tích trữ năng lượng (BESS) tại Trung tâm dữ liệu (Data Center) của Tổng công ty Điện lực TP.HCM - 2021 - Member</li>
+                    <li>Nghiên cứu xây dựng, tích hợp hệ thống DERMS cho lưới điện TPHCM - 2024 - Member</li>
                 </ul>
                 <audio controls style="width: 100%">
                     <source src="/mp3/Sunny-Yeongie.mp3" type="audio/mpeg" />
