--- a/index.html
+++ b/index.html
@@ -214,6 +214,8 @@
                     <div class="border-start border-danger px-5">
                         <h5>Graduated from Ho Chi Minh city University of Technology</h5>
                         <img src="\picture\image2.jpg" class="img-thumbnail" alt="Portrait Photo" style="max-height:500px"></img>
+                        <h5>Graduated from Ho Chi Minh city University of Information Technology</h5>
+                        <img src="\picture\image_uit.jpg" class="img-thumbnail" alt="Portrait Photo" style="max-height:500px"></img>
                         <p class="text-danger mt-3" style="font-size: 20px">Engineer:</p>
                         <ul style="padding-left: 5%; text-align: justify">
                             <li><b>04/2017: </b>Graduated with Automation and control - Engineer degree</li>
