--- a/index.html
+++ b/index.html
@@ -410,6 +410,16 @@
                             </div>
                         </div>
                         <div class="row">
+                            <div class="col-md-12">
+                                <div class="row">
+                                    <div style="margin-left: auto; margin-right: auto; display: block;">
+                                        <img src="picture\z6003431740255_01a44ca4260b8c02d3a6ac9688a97a35.jpg" class="img-thumbnail" alt="Portrait Photo" style="width:100%"></img>
+                                        <p style="font-style: italic; text-align:center">Congress - Vietnam Youth Federation TPHCM</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
                             <h5 class="text-danger"><i class="fas fa-award"></i><span style="margin: 10px;">ACHIVEMENTS</span></h5>
                             <div class="col-md-2">
                             </div>
