--- a/index.html
+++ b/index.html
@@ -413,7 +413,17 @@
                             <div class="col-md-12">
                                 <div class="row">
                                     <div style="margin-left: auto; margin-right: auto; display: block;">
-                                        <img src="picture\z6003431740255_01a44ca4260b8c02d3a6ac9688a97a35.jpg" class="img-thumbnail" alt="Portrait Photo" style="width:100%"></img>
+                                        <img src="picture\465849925_937101588451354_272808231631610179_n.jpg" class="img-thumbnail" alt="Portrait Photo" style="width:100%"></img>
+                                        <p style="font-style: italic; text-align:center">Congress - Vietnam Youth Federation TPHCM</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-12">
+                                <div class="row">
+                                    <div style="margin-left: auto; margin-right: auto; display: block;">
+                                        <img src="picture\screenshot_1730855001.png" class="img-thumbnail" alt="Portrait Photo" style="width:100%"></img>
                                         <p style="font-style: italic; text-align:center">Congress - Vietnam Youth Federation TPHCM</p>
                                     </div>
                                 </div>
