--- a/index.html
+++ b/index.html
@@ -90,10 +90,8 @@
                 <h3><i class="fa-solid fa-person-swimming"></i> Persional Info:</h3>
                 <p class="mt-3" style="font-size: 20px;color:red"><i class="fa-solid fa-lock"></i> Private:</p>
                 <ul style="font-size: 14px;text-align: justify;">
-                    <li>Birthday: 24/07/1994</li>
-                    <li>Mobile Phone: 0976.24.07.94</li>
+                    <li>Birthday: 1994</li>
                     <li>Address: Ho Chi Minh City</li>
-                    <li>Please message first</li>
                 </ul>
                 <p class="mt-3" style="font-size: 20px;color:red"><i class="fa-solid fa-person-skiing"></i> Experiences:
                 </p>
